update tools configurations

--- a/Vim/make/idutils/idutils_LangMap.cfg
+++ b/Vim/make/idutils/idutils_LangMap.cfg
@@ -63,6 +63,10 @@ ChangeLog*		Cdoc
 *.hlsl          Shader
 *.vsh           Shader
 *.psh           Shader
+*.fx            Shader
+*.fxh           Shader
+*.cg            Shader
+*.shd           Shader
 
 # [nt]roff
 *.[0-9]			roff
