--- a/Vim/toolkit/cTags/cTags_UC.cfg
+++ b/Vim/toolkit/cTags/cTags_UC.cfg
@@ -1,3 +1,14 @@
+# ======================================================================================
+# File         : cTags_UC.cfg
+# Author       : Wu Jie 
+# Last Change  : 10/19/2008 | 15:23:50 PM | Sunday,October
+# Description  : 
+# ======================================================================================
+
+# ------------------------------------------------------------------ 
+# Desc: uc ctag config 
+# ------------------------------------------------------------------ 
+
 --langdef=INI
 --langmap=INI:.ini
 --regex-INI=/^[ \t]*\[(.*)\]/\1/b,block/
