change __EX_TESTLIBS to __EX_PROJECT_NAME

--- a/Vim/toolkit/makefile/msvc/vc_project/project_exe/project_exe.vcproj
+++ b/Vim/toolkit/makefile/msvc/vc_project/project_exe/project_exe.vcproj
@@ -47,7 +47,7 @@
 				Optimization="0"
 				InlineFunctionExpansion="0"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;__EX_DEBUG;__EX_WIN32;__EX_TEST;XML_STATIC"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;__EX_DEBUG;__EX_WIN32;__EX_PROJECT_NAME;XML_STATIC"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -130,7 +130,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="WIN32;_RELEASE;_LIB;__EX_RELEASE;__EX_WIN32;__EX_TEST;XML_STATIC"
+				PreprocessorDefinitions="WIN32;_RELEASE;_LIB;__EX_RELEASE;__EX_WIN32;__EX_PROJECT_NAME;XML_STATIC"
 				MinimalRebuild="false"
 				RuntimeLibrary="2"
 				RuntimeTypeInfo="false"
@@ -208,7 +208,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="WIN32;_FINAL;_LIB;__EX_FINAL;__EX_WIN32;__EX_TEST;XML_STATIC"
+				PreprocessorDefinitions="WIN32;_FINAL;_LIB;__EX_FINAL;__EX_WIN32;__EX_PROJECT_NAME;XML_STATIC"
 				RuntimeLibrary="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
@@ -288,7 +288,7 @@
 				Optimization="0"
 				InlineFunctionExpansion="0"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDLL;__EX_DEBUG;__EX_WIN32;__EX_TEST;__EX_DLL;XML_STATIC"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDLL;__EX_DEBUG;__EX_WIN32;__EX_PROJECT_NAME;__EX_DLL;XML_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -372,7 +372,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="WIN32;_RELEASE;_LIB;__EX_RELEASE;__EX_WIN32;__EX_TEST;__EX_DLL;XML_STATIC"
+				PreprocessorDefinitions="WIN32;_RELEASE;_LIB;__EX_RELEASE;__EX_WIN32;__EX_PROJECT_NAME;__EX_DLL;XML_STATIC"
 				MinimalRebuild="false"
 				RuntimeLibrary="2"
 				RuntimeTypeInfo="false"
@@ -450,7 +450,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="WIN32;_FINAL;_LIB;__EX_FINAL;__EX_WIN32;__EX_TEST;__EX_DLL;XML_STATIC"
+				PreprocessorDefinitions="WIN32;_FINAL;_LIB;__EX_FINAL;__EX_WIN32;__EX_PROJECT_NAME;__EX_DLL;XML_STATIC"
 				RuntimeLibrary="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
